# cv-algorithms

./: LICENSE  README.md
object_tracking/: README.md  play_image_sequence.py  trackers.py  yolo_detector.py
stereo_vision/: CMakeLists.txt  README.md  stereo_vision.py  stereo_vision_parallel.cpp
